--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite --force --config vite.playground.ts",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "npm run build:lib && npm run build:dts",
+    "build:lib": "vite build",
+    "build:dts": "vue-tsc --declaration --emitDeclarationOnly -p tsconfig.build.json",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@babel/types": "^7.23.9",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
@@ -23,6 +26,7 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "@vuepic/vue-datepicker": "^8.1.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
