--- a/package.json
+++ b/package.json
@@ -1,8 +1,44 @@
 {
   "name": "vue-query-param",
-  "version": "0.0.0",
+  "version": "1.0",
   "private": true,
+  "description": "Vue directive for bind a model with a URL's query param",
+  "author": {
+    "name": "Aldo Hernandez",
+    "url": "https://github.com/TaTo30"
+  },
+  "homepage": "https://github.com/TaTo30/vue-query-param/",
+  "license": "MIT",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TaTo30/vue-query-param.git"
+  },
+  "bugs": {
+    "url": "https://github.com/TaTo30/vue-query-param/issues"
+  },
+  "keywords": [
+    "vue",
+    "directive",
+    "url",
+    "query",
+    "param",
+    "bind"
+  ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.umd.cjs",
+      "import": "./dist/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "dev": "vite --force --config vite.playground.ts",
     "build": "npm run build:lib && npm run build:dts",
