added the workflow for CI to npm

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*", "vite.config.ts", "vite.playground.ts", "playground/**/*", "shims.d.ts", "tests/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "public"]
 }
